fix the announcement on Iphone 3258718141

--- a/app/javascript/styles/brighteon-social/diff.scss
+++ b/app/javascript/styles/brighteon-social/diff.scss
@@ -1352,6 +1352,13 @@ body .muted-hint a, .admin-wrapper .content .muted-hint a {
       & + .icon-button {
         color: $white;
       }
+
+      p {
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+      }
     }
   }
 }
